Avoid wrapping the time text box with the unit dropdown

--- a/static/css/time_tracking.css
+++ b/static/css/time_tracking.css
@@ -8,6 +8,10 @@ div.day_entry {
     position: relative;
 }
 
+div.day_entry .update-time {
+    white-space: nowrap;
+}
+
 div.submit_day_time_button {
     position: absolute;
     bottom: 0;
